packages/frontend/app/components/Trade/OrderInput/LeverageSlider/LeverageSlider.module.css
:root {
    --slider-track-margin: 20px 0 30px 0;
}
.leverageSliderContainer {
    width: 100%;
    padding: 0;
    margin: 0;
    gap: var(--gap-s);
}
.containerTitle {
    color: var(--text2, #bcbcc4);
    font-size: var(--font-size-s, 12px);
}

.sliderWithValue {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    gap: var(--gap-m);
    padding-left: var(--padding-xs);
}

.sliderContainer {
    flex: 1;
    position: relative;
}

.sliderTrack {
    position: relative;
    width: 100%;
    height: 2px;
    cursor: pointer;
    margin: var(--slider-track-margin);
}
.sliderTrack::before {
    content: '';
    position: absolute;
    top: -12px;
    bottom: -12px;
    left: 0;
    right: 0;
    z-index: 1;
}

.sliderBackground {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--bg-dark4);
}

.sliderActive {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    transition: width 0.2s ease;
}

.sliderMarker {
    position: absolute;
    width: 3px;
    height: 8px;
    border-radius: var(--radius-s);
    top: 50%;
    transform: translate(-50%, -50%);
    border: 2px solid;
    z-index: 2;
}

.sliderMarkerCurrent {
    display: none;
}
.sliderKnob {
    position: absolute;
    width: 14px;
    height: 14px;
    border-radius: 50%;
    top: 50%;

    transform: translate(-50%, -50%);
    border: 2px solid;
    background-color: var(--bg-dark2) !important;
    z-index: 3;
    cursor: grab;
    transition: left 0.2s ease;
    outline: none;
}

.sliderKnob:active {
    cursor: grabbing;
    transform: translate(-50%, -50%) scale(1.1);
    background-color: var(--bg-dark2);
}

.labelContainer {
    position: relative;
    width: 100%;
    height: 20px;
    margin-top: -25px;
}

.valueLabel {
    position: absolute;
    transform: translateX(-50%);
    font-size: var(--font-size-xs, 10px);
    white-space: nowrap;
    text-align: center;
    cursor: pointer;
    padding: 5px;
}

.valueLabel:hover {
    color: var(--text1) !important;
}

.valueDisplay {
    position: relative;
    width: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    align-items: center;
    background-color: var(--bg-dark3);
    border-radius: var(--radius-s);
    padding: 0 var(--padding-s);
}

.valueInput {
    width: 100%;
    height: 32px;
    background-color: transparent;
    border: none;
    color: var(--text1);
    font-size: var(--font-size-s, 12px);
    text-align: center;
    outline: none;
}

.valueSuffix {
    font-size: var(--font-size-s, 12px);
}

/* remove afterwards */
.randomMaxContainer {
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-items: center;

    font-size: var(--font-size-s);
}

.randomMaxContainer button {
    outline: none;
    border: none;
    background: var(--accent1);
    color: var(--text1);
    padding: var(--padding-xs);
}

